<resources>
    <string name="app_name">Teem</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">password</string>
    <string name="username">phone number</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navBottom_profile">Profile</string>
    <string name="navBottom_groups">Groups</string>
    <string name="navBottom_shop">Shop</string>
    <string name="title">group-title</string>
    <string name="subtitle">group-subtitle</string>
</resources>
